--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@rollup/plugin-terser": "^0.4.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "icons": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "^2.1.3",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "stable": "^0.1.8",
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +43,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "description": "Welcome to my portfolio site! Here you can find examples of my work as a Front End Developer/Full Stack Developer, as well as information about my background and experience.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ivonamojsovska/react-portfolio.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ivonamojsovska/react-portfolio/issues"
   }
 }
