--- a/package.json
+++ b/package.json
@@ -20,12 +20,9 @@
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^7.0.0"
   },
-  "engines": {
-    "node": "18.x"
-  },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
